--- a/websocket-terminal/package.json
+++ b/websocket-terminal/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
+    "node-pty": "^0.7.0",
     "socket.io": "^2.0.3",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
