--- a/websocket-terminal-cpp-server/Makefile
+++ b/websocket-terminal-cpp-server/Makefile
@@ -3,9 +3,9 @@ CXX=g++
 LD=gcc
 
 TARGET=main
-CFLAGS=-Wall -O3 -static
+CFLAGS=-Wall -O0 -ggdb -static
 LDFLAGS=-fPIC -lpthread -lm -lutil -static
-OBJS=main.o sha1.o base64.o pty.o
+OBJS=main.o sha1.o base64.o pty.o ws.o http.o frontend.o
 
 .PHONY: clean
 
@@ -15,5 +15,8 @@ $(TARGET): $(OBJS)
 %.o: %.cpp
 	$(CXX) $(CFLAGS) -c $< -o $@
 
+frontend.cpp: frontend.html
+	xxd -i frontend.html > frontend.cpp
+
 clean:
-	rm -rf $(OBJS) $(TARGET)
+	rm -rf $(OBJS) $(TARGET) frontend.cpp
